# boundfit

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  boundfit.f  configure  configure.ac  cubspl.f  factorialpf.f  fextrae.f  findmml.f  nknotsmax.inc  ranspl.f  splfit.f_old  yfunk_pseudo.f  yfunk_splfit.f  yfunk_splfit1.f  yfunk_splfit3.f
docs/: Makefile  conf.py  index.rst  installation.rst  license_agreement.rst  program_description.rst  using_the_program.rst
docs/scripts/: boundfit_pol.sh  boundfit_pol.tcsh  script1.csh  script1.sh  script2.csh  script2.sh  script3.csh  script3.sh  script4.csh  script4.sh
exec_boundfit/: exec_boundfit.py
numsplines/: numsplines.html  numsplines.ipynb
python/: exec_boundfit.html  exec_boundfit.ipynb  exec_boundfit.py
src/: Makefile.am  Makefile.in  askoutfile.f  binsearch.f  boundfit.f  cleantab.f  combpf.f  cubspl.f  cubsplarclength.f  cubsplx.f  cubsplxp.f  downhill.f  factorialpf.f  fderi.f  fextrae.f  findmml.f  fmedian1.f  fpoly.f  indexr.f  iofunctions.f  leenewfile.f  lenlinea.inc.in  merge_knots.f  ndatamax.inc.in  ndegmax.inc.in  nfixedmax.inc.in  nknotsmax.inc.in  ordena1f.f  ordena3f.f  polfit.f  polfit_xic.f  pseudofit.f  ranred.f  ranspl.f  saveresult.f  splfit.f  systemfunction.f  truebeg.f  truelen.f  version.inc.in  (+5 more)
