# $Id$
#
bin_PROGRAMS = boundfit
boundfit_SOURCES =  \
lenlinea.inc \
ndatamax.inc \
ndegmax.inc \
nknotsmax.inc \
version.inc \
binsearch.f \
boundfit.f \
cleantab.f \
combpf.f \
cubspl.f \
cubsplx.f \
downhill.f \
factorialpf.f \
fextrae.f \
findmml.f \
fpoly.f \
indexr.f \
iofunctions.f \
leenewfile.f \
Makefile.am \
merge_knots.f \
polfit.f \
pseudofit.f \
ranred.f \
ranspl.f \
saveresult.f \
splfit.f \
systemfunction.f \
truebeg.f \
truelen.f \
yfunk_pseudo.f \
yfunk_splfit1.f \
yfunk_splfit2.f \
yfunk_splfit3.f \
yfunk_splfit.f
