# $Id$
#
bin_PROGRAMS = boundfit
boundfit_SOURCES =  \
lenlinea.inc \
ndatamax.inc \
ndegmax.inc \
nknotsmax.inc \
version.inc \
askoutfile.f \
binsearch.f \
boundfit.f \
cleantab.f \
combpf.f \
cubspl.f \
cubsplx.f \
cubsplxp.f \
downhill.f \
factorialpf.f \
fderi.f \
fextrae.f \
findmml.f \
fpoly.f \
indexr.f \
iofunctions.f \
leenewfile.f \
Makefile.am \
merge_knots.f \
ordena1f.f \
polfit.f \
polfit_xic.f \
pseudofit.f \
ranred.f \
ranspl.f \
saveresult.f \
splfit.f \
systemfunction.f \
truebeg.f \
truelen.f \
yfunk_pseudo.f \
yfunk_splfit1.f \
yfunk_splfit2.f \
yfunk_splfit3.f \
yfunk_splfit.f
